# Multiplatform-Photo-Compressor-App

./: README.md  index.html  index.js  package-lock.json  package.json  style.css
.github/workflows/: main.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/exiftool_folder/: MYMETA.json  MYMETA.yml  Makefile
src-tauri/exiftool_folder/blib/man1/: exiftool.1
src-tauri/exiftool_folder/blib/man3/: File::RandomAccess.3pm  Image::ExifTool.3pm  Image::ExifTool::AES.3pm  Image::ExifTool::AFCP.3pm  Image::ExifTool::AIFF.3pm  Image::ExifTool::APE.3pm  Image::ExifTool::APP12.3pm  Image::ExifTool::ASF.3pm  Image::ExifTool::Apple.3pm  Image::ExifTool::Audible.3pm  Image::ExifTool::BMP.3pm  Image::ExifTool::BPG.3pm  Image::ExifTool::BZZ.3pm  Image::ExifTool::BigTIFF.3pm  Image::ExifTool::BuildTagLookup.3pm  Image::ExifTool::CBOR.3pm  Image::ExifTool::Canon.3pm  Image::ExifTool::CanonCustom.3pm  Image::ExifTool::CanonRaw.3pm  Image::ExifTool::CanonVRD.3pm  Image::ExifTool::CaptureOne.3pm  Image::ExifTool::Casio.3pm  Image::ExifTool::Charset.3pm  Image::ExifTool::DICOM.3pm  Image::ExifTool::DJI.3pm  Image::ExifTool::DNG.3pm  Image::ExifTool::DPX.3pm  Image::ExifTool::DV.3pm  Image::ExifTool::DarwinCore.3pm  Image::ExifTool::DjVu.3pm  Image::ExifTool::EXE.3pm  Image::ExifTool::Exif.3pm  Image::ExifTool::FITS.3pm  Image::ExifTool::FLAC.3pm  Image::ExifTool::FLIF.3pm  Image::ExifTool::FLIR.3pm  Image::ExifTool::Fixup.3pm  Image::ExifTool::Flash.3pm  Image::ExifTool::FlashPix.3pm  Image::ExifTool::Font.3pm  (+152 more)
src-tauri/src/: main.rs
