[package]
name = "dass"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
image_compression="0.1.1"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["api-all", "process-command-api"] }
tauri-dialog = "0.1.1"
image = "0.24.5"
image_compressor = "1.3.0"
jpeg-encoder = "0.5.1"
mozjpeg = "0.9.4"
mozjpeg-sys = "1.0.6"
url = "2.2.2"
exif-rs = "0.1.0"
chrono = "0.4.24"
walkdir = "2.3.3"
async-recursion = "0.3"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
out_dir = "dist"
